[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graviton-ui"
version = "0.1.0"
description = "Dark-themed chat interface for Graviton — load 70B+ models with real-time progress, stream tokens via SSE"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "Graviton Contributors"},
]
keywords = [
    "ai", "inference", "ui", "chat", "graviton",
    "llm", "quantization", "web-ui", "streaming",
    "layer-by-layer-loading", "local-llm", "70b-model",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "graviton-ai[huggingface]>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.24.0",
]

[project.scripts]
graviton-ui = "graviton_ui.__main__:main"

[project.urls]
Homepage = "https://opengraviton.github.io"
Repository = "https://github.com/opengraviton/graviton-ui"

[tool.setuptools.packages.find]
include = ["graviton_ui*"]
